# CppSnake

./: CMakeLists.txt  README.md  main.cpp  settings.h
src/: main.cpp
